# cardputer-adv

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  TROUBLESHOOTING.md  WORKFLOW.md  boot.py  boot.py.orig  deploy.sh  legacy_main.py  main.py  pyproject.toml
.github/workflows/: pre-commit.yml
apps/: anim_demo.py  brightness_demo.py  demo_anim.py  demo_keyboard.py  demo_lcd.py  demo_nvs.py  demo_sound.py  demo_text.py  demo_widgets.py  ftp_server_app.py  hello_world.py  keyboard_demo.py  launcher.py  manifest.json  notepad.py  qrcode_demo.py  settings_app.py  shapes_demo.py  sound_demo.py  storage_demo.py  webserver_demo_app.py
apps/demo/: anim_demo.py  keyboard_demo.py  manifest.json  qrcode_demo.py  shapes_demo.py  sound_demo.py  storage_demo.py  webserver_demo_app.py
apps/demo/webserver_demo/: __init__.py  pages.py  templates.py
apps/settings/: about_tab.py  display_tab.py  sound_tab.py  system_tab.py  wifi_tab.py
apps/webserver_demo/: __init__.py  api.py  pages.py
legacy/: README.md  main.py
legacy/apps/: demo_anim.py  demo_keyboard.py  demo_lcd.py  demo_nvs.py  demo_sound.py  demo_widgets.py  hello_world.py  notepad.py
lib/: app_base.py  framework.py  keycode.py  microdot.mpy  sdcard.py  uftpd.py
libs/: app_base.py  framework.py
openspec/: project.md
openspec/changes/add-demo-apps/: proposal.md  tasks.md
openspec/changes/add-demo-apps/specs/demo-apps/: spec.md
openspec/changes/add-ftp-server/: proposal.md
openspec/changes/add-ftp-server/specs/ftp-server/: spec.md
openspec/changes/add-mdns/: proposal.md  tasks.md
openspec/changes/add-mdns/specs/ftp-server/: spec.md
openspec/changes/add-mdns/specs/mdns/: spec.md
openspec/changes/add-microdot-demo/: proposal.md  tasks.md
openspec/changes/add-microdot-demo/specs/webserver-demo/: spec.md
openspec/changes/add-settings-app/: tasks.md
openspec/changes/add-settings-app/specs/settings-app/: spec.md
openspec/changes/add-usb-mass-storage/: proposal.md
openspec/changes/add-wifi-boot-connect/: proposal.md  tasks.md
openspec/changes/add-wifi-boot-connect/specs/settings-app/: spec.md
openspec/changes/archive/2026-01-20-add-file-browser/: proposal.md  tasks.md
openspec/changes/archive/2026-01-20-add-file-browser/specs/file-browser/: spec.md
openspec/changes/archive/2026-01-20-add-sd-card-demo/: proposal.md  tasks.md
openspec/changes/archive/2026-01-20-add-sd-card-demo/specs/demo-apps/: spec.md
openspec/changes/archive/2026-01-20-add-settings-app/: proposal.md  tasks.md
openspec/changes/archive/2026-01-20-add-settings-app/specs/settings-app/: spec.md
openspec/changes/archive/2026-01-20-add-wifi-boot-connect/: tasks.md
openspec/changes/archive/2026-01-20-explore-widgets/: proposal.md  tasks.md
openspec/changes/archive/2026-01-20-explore-widgets/specs/widgets/: spec.md
openspec/changes/archive/2026-01-20-refactor-launcher-lazy-load/: proposal.md  tasks.md
openspec/changes/archive/2026-01-20-refactor-launcher-lazy-load/specs/launcher/: spec.md
openspec/changes/archive/2026-01-21-add-ftp-server/: tasks.md
openspec/changes/archive/2026-01-21-add-usb-mass-storage/: proposal.md  tasks.md
openspec/changes/refactor-launcher-lazy-load/: tasks.md
openspec/specs/demo-apps/: spec.md
openspec/specs/file-browser/: spec.md
openspec/specs/ftp-server/: spec.md
openspec/specs/launcher/: spec.md
openspec/specs/settings-app/: spec.md
